consul-statefulset.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    generation: 1
    name: consul
    namespace: vault-deploy
    selfLink: /apis/apps/v1/namespaces/vault-deploy/statefulsets/consul
  spec:
    podManagementPolicy: OrderedReady
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: consul
    serviceName: consul
    template:
      metadata:
        labels:
          app: consul
      spec:
        affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - consul
              topologyKey: kubernetes.io/hostname
        containers:
        - args:
          - agent
          - -advertise=$(POD_IP)
          - -bind=0.0.0.0
          - -bootstrap-expect=1
          - -retry-join=consul-0.consul.$(NAMESPACE).svc.cluster.local
          - -client=0.0.0.0
          - -datacenter=dc1
          - -data-dir=/consul/data
          - -domain=cluster.local
          - -server
          - -ui
          - -disable-host-node-id
          image: docker.io/consul
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                - /bin/sh
                - -c
                - consul leave
          name: consul
          ports:
          - containerPort: 8500
            name: ui-port
            protocol: TCP
          - containerPort: 8400
            name: alt-port
            protocol: TCP
          - containerPort: 53
            name: udp-port
            protocol: TCP
          - containerPort: 8443
            name: https-port
            protocol: TCP
          - containerPort: 8080
            name: http-port
            protocol: TCP
          - containerPort: 8301
            name: serflan
            protocol: TCP
          - containerPort: 8302
            name: serfwan
            protocol: TCP
          - containerPort: 8600
            name: consuldns
            protocol: TCP
          - containerPort: 8300
            name: server
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /consul/data
            name: data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          fsGroup: 1000
        serviceAccount: privilegeduser
        serviceAccountName: privilegeduser
        terminationGracePeriodSeconds: 10
    updateStrategy:
      rollingUpdate:
        partition: 0
      type: RollingUpdate
    volumeClaimTemplates:
    - metadata:
        creationTimestamp: null
        name: data
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
