vault-statefulset.yaml
  apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    labels:
      app: vault
    name: vault
    namespace: vault
    selfLink: /apis/apps/v1/namespaces/vault-deploy/statefulsets/vault
  spec:
    podManagementPolicy: OrderedReady
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: vault
    serviceName: vault
    template:
      metadata:
        labels:
          app: vault
      spec:
        affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - vault
              topologyKey: kubernetes.io/hostname
        containers:
        - command:
          - vault
          - server
          - -config
          - /vault/config/vault.hcl
          image: "vault:latest"
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                - vault operator step-down
          name: vault
          ports:
          - containerPort: 8200
            name: vault-port
            protocol: TCP
          - containerPort: 8201
            name: cluster-port
            protocol: TCP
          resources: {}
          securityContext:
            capabilities:
              add:
              - IPC_LOCK
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /vault/config/vault.hcl
            name: configurations
            subPath: vault.hcl
        - args:
          - agent
          - -retry-join=consul-0.consul.$(NAMESPACE).svc.cluster.local
          - -domain=cluster.local
          - -datacenter=dc1
          - -disable-host-node-id
          - -client=127.0.0.1
          - -bind=$(POD_IP)
          image: "consul"
          imagePullPolicy: IfNotPresent
          name: consul-vault-agent
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /consul/data
            name: data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: privilegeduser
        serviceAccountName: privilegeduser
        terminationGracePeriodSeconds: 10
        volumes:
        - configMap:
            defaultMode: 420
            name: vault
          name: configurations
    updateStrategy:
      rollingUpdate:
        partition: 0
      type: RollingUpdate
    volumeClaimTemplates:
    - metadata:
        creationTimestamp: null
        name: data
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
