endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    labels:
      app: consul
    name: consul
    namespace: vault-deploy
    resourceVersion: "251747"
    selfLink: /api/v1/namespaces/vault-deploy/endpoints/consul
  subsets:
  - addresses:
    - hostname: consul-0
      ip: 10.128.0.38
      nodeName: openshift
      targetRef:
        kind: Pod
        name: consul-0
        namespace: vault-deploy
    ports:
    - name: serflan-tcp
      port: 8301
      protocol: TCP
    - name: serfwan-udp
      port: 8302
      protocol: UDP
    - name: https
      port: 8443
      protocol: TCP
    - name: server
      port: 8300
      protocol: TCP
    - name: serfwan-tcp
      port: 8302
      protocol: TCP
    - name: rpc
      port: 8400
      protocol: TCP
    - name: serflan-udp
      port: 8301
      protocol: UDP
    - name: http
      port: 8500
      protocol: TCP
    - name: consuldns
      port: 8600
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    labels:
      app: vault
    name: vault
    namespace: vault-deploy
    selfLink: /api/v1/namespaces/vault-deploy/endpoints/vault
  subsets:
  - addresses:
    - hostname: vault-0
      ip: 10.128.0.39
      nodeName: openshift
      targetRef:
        kind: Pod
        name: vault-0
        namespace: vault-deploy
        resourceVersion: "252572"
    ports:
    - name: vault
      port: 8200
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
