vault-service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: vault
    name: vault
    namespace: vault-deploy
  spec:
    ports:
    - name: vault
      port: 8200
      protocol: TCP
      targetPort: 8200
    selector:
      app: vault
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
