ingressexample.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault
spec:
  rules:
  - host: vault-vault-deploy.apps.home.lab
    http:
     paths:
     - path: /
       backend:
        serviceName: vault
        servicePort: 8200
